Expand comment explaining why cleanthat engine is needed